--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
   datasource:
     url : "jdbc:mysql://localhost/library"
     username : "root"
-    password : "cdh951102!"
+    password : "Cdh951102!"
     driver-class-name : com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
